// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={1.5}
          >
            <View
              height={350}
              width={525}
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/t.png",
                  }
                }
              />
            </View>
            <Image
              source={
                Object {
                  "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
                }
              }
            />
            <Image
              source={
                Object {
                  "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "always",
            "horizontal": "always",
            "top": "never",
          }
        }
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={1.5}
    >
      <View
        height={350}
        width={525}
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../packages/image/assets/t.png",
            }
          }
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={1.5}
          >
            <Image
              source={null}
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "always",
            "horizontal": "always",
            "top": "never",
          }
        }
        pointerEvents="none"
      />
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={1.5}
    >
      <Image
        source={null}
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    visible={false}
  >
    <View>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "never",
            "horizontal": "always",
            "top": "always",
          }
        }
      />
      <View>
        <View>
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <SafeAreaView
        forceInset={
          Object {
            "horizontal": "always",
            "vertical": "always",
          }
        }
      >
        <Gestures>
          <View
            aspectRatio={1.5}
          >
            <View
              height={350}
              width={525}
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../packages/image/assets/t.png",
                  }
                }
              />
            </View>
            <Image
              source={
                Object {
                  "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                }
              }
            />
            <Image
              source={
                Object {
                  "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
                }
              }
            />
          </View>
        </Gestures>
      </SafeAreaView>
      <SafeAreaView
        forceInset={
          Object {
            "bottom": "always",
            "horizontal": "always",
            "top": "never",
          }
        }
        pointerEvents="none"
      >
        <View>
          <Text>
            Caption
          </Text>
        </View>
      </SafeAreaView>
    </View>
  </Modal>
  <View>
    <View
      aspectRatio={1.5}
    >
      <View
        height={350}
        width={525}
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../packages/image/assets/t.png",
            }
          }
        />
      </View>
      <Image
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
          }
        }
      />
    </View>
  </View>
</View>
`;
